metadata/force-app/main/default/objects/CustomName_EkiMR__c/CustomName_EkiMR__c.object-meta.xml
<CustomObject>
    <description>Description_hTOlf</description>
    <label>CustomLabel_wsjwM</label>
    <nameField>
        <label>CustomLabel_wsjwM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wsjwMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>