metadata/force-app/main/default/objects/CustomName_EkiMR__c/fields/CustomField_RBbBz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RBbBz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldbJoKz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>