metadata/force-app/main/default/objects/CustomName_EkiMR__c/fields/CustomField_VTlgY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VTlgY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldheLNz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>